test_suite/alan-2022-examples/failing/002540_mutation.alan
source p begin oQ := array function cqLW() begin relax end 1827 end
